--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #
-#    Copyright 2016-2017 the original author or authors.
+#    Copyright 2016-2018 the original author or authors.
 #
 #    Licensed under the Apache License, Version 2.0 (the "License");
 #    you may not use this file except in compliance with the License.
@@ -16,5 +16,21 @@
 
 spring.profiles.include=common
 
+
+spring.session.store-type=jdbc
+spring.session.servlet.filter-dispatcher-types=request
+spring.session.servlet.filter-order=-2147483598
+
+server.session.timeout= 1800
+spring.session.jdbc.schema=classpath:/schema-mysql.sql
+spring.session.jdbc.table-name=SPRING_SESSION
+
+
+
+
 # DataSource settings
-spring.datasource.url=jdbc:hsqldb:file:~/db/jpetstore
+#spring.datasource.url=jdbc:hsqldb:file:~/db/jpetstore
+spring.datasource.url=jdbc:mysql://"10.32.153.163"/jpetstore
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
